[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/NewItem.gd" type="Script" id=1]

[node name="NewItem" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -508.0
rect_min_size = Vector2( 0, 92 )
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 405.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Contents" type="Button" parent="ScrollContainer"]
margin_right = 405.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoveButton" type="Button" parent="."]
margin_left = 409.0
margin_right = 456.0
margin_bottom = 92.0
text = "Move"

[node name="OpenButton" type="Button" parent="."]
margin_left = 460.0
margin_right = 537.0
margin_bottom = 92.0
text = "Open Link"

[node name="DeleteButton" type="Button" parent="."]
margin_left = 541.0
margin_right = 596.0
margin_bottom = 92.0
text = "Delete"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
visible = true
margin_left = 600.0
margin_right = 800.0
margin_bottom = 92.0
popup_exclusive = true
window_title = "Selected Text"
dialog_text = "Contents"

[connection signal="pressed" from="ScrollContainer/Contents" to="." method="_on_Contents_pressed"]
[connection signal="pressed" from="MoveButton" to="." method="_on_MoveButton_pressed"]
[connection signal="pressed" from="OpenButton" to="." method="_on_OpenButton_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
